Bug 150576 - When I delete a row above a previously deleted row and the "Track changes" turned on, the cursor jump to the beginning of the document.
Summary: When I delete a row above a previously deleted row and the "Track changes" tu...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-08-24 07:28 UTC by NISZ LibreOffice Team
Modified: 2022-08-30 12:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample for testing (16.50 KB, application/vnd.oasis.opendocument.text)
2022-08-24 07:30 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-08-24 07:28:59 UTC
Description:
When I delete a row with the "Delete selected row" button, above a previously deleted row and the "Track changes" turned on but the "Show" is not.
The cursor jump to the beginning of the document. But if you turn on the "Show" then the cursor stay in the deleted row.

Steps to Reproduce:
1. Open the attached file.
2. Select the first row with the arrow which is on the before of the table row.
3. Click the "Delete selected row" button.

Actual Results:
When I delete the first row (because the second row already is deleted) then the cursor jump to the beginning of the document.

Expected Results:
The cursor stay in the table first row or the next not deleted row.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e93b7f6a5c5f9ee86546d95d7fe70ecc26b71b91
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-08-24 07:30:20 UTC
Created attachment 181995 [details]
Sample for testing
Comment 2 Commit Notification 2022-08-24 20:25:17 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24087697d5cf78aac346d4dcea0596373e15a95c

tdf#150576 sw: fix cursor pos deleting at rows deleted already

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-08-25 17:06:10 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/6b86e529fb6681bbd8207ee7f3d9e57cb2e55502

tdf#150576 sw: fix cursor pos deleting at rows deleted already

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-08-30 12:09:54 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b323f1fba2a7a409177f5296c6ba8b98c9e537ad
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL