tdf#150576 sw: fix cursor pos deleting at rows deleted already

Instead of jumping in the start of the document, set cursor
after (or deleting the last row, before) the rows deleted
already in Hide Changes mode with enabled change tracking.

Regression from commit a74c51025fa4519caaf461492e4ed8e68bd34885
"tdf#146962 sw: hide deleted row at deletion in Hide Changes".

Follow-up to commit 189aa05c6ea17a8e823b4eab18ea0d1131d9d73e
"tdf#148849 sw: fix cursor pos at tracked DeleteRow in Hide Changes".

Change-Id: Ifc2a7f41a57f413d27d9b464a0e464643d15f404